# morph

./: .gitignore  README.md  TASK.md
.github/workflows/: cross-platform.yml  format.yml  rust.yml
morpheus/: Cargo.toml
morpheus/src/: lib.rs  main.rs
morpheus/src/cli/: commands.rs  ui.rs
morpheus/src/core/: client_manager.rs  mod.rs  server.rs  storage.rs
morpheus/src/log/: middleware.rs
morpheus/src/ws/: handler.rs  mod.rs
morpheus/tests/: integration.rs  smoke.rs
neo/: Cargo.toml
neo/src/: lib.rs  main.rs
neo/src/cli/: commands.rs  ui.rs
neo/src/core/: client.rs  msg.rs
neo/src/ws/: conn.rs
neo/tests/: integration.rs  smoke.rs
