[package]
name = "morpheus"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"
async-trait = "0.1.77"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
chrono = "0.4"

[dev-dependencies]
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
anyhow = "1.0"
